New addition to /projects/
Initial build of /colors/

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h3>Projects</h3>
-<p>to be added..</p>
+<h3><a href="https://kajlada.github.io/colors/">colors</a></h3>
 </body>
 </html>
